Fix custom scrollbar

--- a/resources/sass/default/layout/_site.sass
+++ b/resources/sass/default/layout/_site.sass
@@ -11,9 +11,11 @@ body
     overflow: hidden
 
   .main-content
-    overflow-y: scroll
     margin: 0 -15px
     padding: 0 15px
+
+    &.main-content--custom-scrollbar
+      padding-right: 0
 
 // ---------------------------------
 // [Sidebars] ::start
